fix: improve SQL Server code completion and parsing indicator
  - Add function parameter completion with built-in SqlServer functions
  - Fix code completion when caret is between statements on whitespace
  - Fix parsing indicator not shown in some editor cases
  - Order built-in scalar functions below real columns in completion list
  - Performance and robustness fixes for unparsable document sections
  - Fork CodeCompletionCore (c3) with local fixes